--- a/app/src/main/res/layout/card_main_app_card.xml
+++ b/app/src/main/res/layout/card_main_app_card.xml
@@ -105,7 +105,7 @@
                 android:layout_marginEnd="10dp"
                 android:animateLayoutChanges="true"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <TextView
                     android:id="@+id/textView13"
@@ -127,35 +127,25 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="15dp"
                     android:layout_weight="1"
                     android:background="@drawable/text_input_layout_shape"
+                    android:paddingStart="0dp"
                     android:paddingLeft="0dp"
+                    android:paddingEnd="0dp"
                     android:paddingRight="0dp"
-                    android:paddingBottom="0dp"
                     android:textColorHint="#333"
                     app:helperTextTextColor="#333">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="0dp"
-                        android:background="@android:color/transparent"
                         android:backgroundTint="@android:color/transparent"
                         android:hint="Enter data size"
                         android:outlineProvider="none"
-                        android:paddingLeft="10dp"
-                        android:paddingTop="10dp"
                         android:singleLine="true"
                         android:textColorHighlight="#333"
                         android:textColorLink="#333" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="#000"
-                        android:orientation="vertical"></LinearLayout>
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <LinearLayout
@@ -168,6 +158,7 @@
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="2dp"
                         android:layout_weight="1"
                         android:backgroundTint="@color/colorPrimary"
                         android:drawableLeft="@drawable/ic_baseline_add_24"
@@ -176,7 +167,8 @@
 
                     <Button
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="52dp"
+                        android:layout_margin="2dp"
                         android:layout_weight="1"
                         android:backgroundTint="@color/colorPrimary"
                         android:drawableLeft="@drawable/ic_baseline_remove_24"
@@ -193,6 +185,7 @@
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="2dp"
                         android:layout_weight="1"
                         android:backgroundTint="@color/colorPrimary"
                         android:drawableLeft="@drawable/ic_baseline_add_24"
@@ -202,6 +195,7 @@
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="2dp"
                         android:layout_weight="1"
                         android:backgroundTint="@color/colorPrimary"
                         android:drawableLeft="@drawable/ic_baseline_remove_24"
@@ -212,6 +206,9 @@
                     android:id="@+id/button7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginRight="2dp"
                     android:layout_marginBottom="5dp"
                     android:layout_weight="1"
                     android:backgroundTint="@color/colorPrimary"
