--- a/app/src/main/res/layout/dialog_create_dp.xml
+++ b/app/src/main/res/layout/dialog_create_dp.xml
@@ -61,32 +61,22 @@
                             android:layout_marginTop="15dp"
                             android:layout_weight="1"
                             android:background="@drawable/text_input_layout_shape"
+                            android:paddingStart="0dp"
                             android:paddingLeft="0dp"
+                            android:paddingEnd="0dp"
                             android:paddingRight="0dp"
-                            android:paddingBottom="0dp"
                             android:textColorHint="#333"
                             app:helperTextTextColor="#333">
 
                             <com.google.android.material.textfield.TextInputEditText
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginBottom="0dp"
-                                android:background="@android:color/transparent"
                                 android:backgroundTint="@android:color/transparent"
                                 android:hint="Name"
                                 android:outlineProvider="none"
-                                android:paddingLeft="10dp"
-                                android:paddingTop="10dp"
                                 android:singleLine="true"
                                 android:textColorHighlight="#333"
                                 android:textColorLink="#333" />
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="1dp"
-                                android:background="#000"
-                                android:orientation="vertical"></LinearLayout>
                         </com.google.android.material.textfield.TextInputLayout>
 
                         <com.google.android.material.textfield.TextInputLayout
@@ -95,32 +85,22 @@
                             android:layout_marginTop="15dp"
                             android:layout_weight="1"
                             android:background="@drawable/text_input_layout_shape"
+                            android:paddingStart="0dp"
                             android:paddingLeft="0dp"
+                            android:paddingEnd="0dp"
                             android:paddingRight="0dp"
-                            android:paddingBottom="0dp"
                             android:textColorHint="#333"
                             app:helperTextTextColor="#333">
 
                             <com.google.android.material.textfield.TextInputEditText
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginBottom="0dp"
-                                android:background="@android:color/transparent"
                                 android:backgroundTint="@android:color/transparent"
                                 android:hint="Data size"
                                 android:outlineProvider="none"
-                                android:paddingLeft="10dp"
-                                android:paddingTop="10dp"
                                 android:singleLine="true"
                                 android:textColorHighlight="#333"
                                 android:textColorLink="#333" />
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="1dp"
-                                android:background="#000"
-                                android:orientation="vertical"></LinearLayout>
                         </com.google.android.material.textfield.TextInputLayout>
 
                         <com.google.android.material.textfield.TextInputLayout
@@ -129,9 +109,10 @@
                             android:layout_marginTop="15dp"
                             android:layout_weight="1"
                             android:background="@drawable/text_input_layout_shape"
+                            android:paddingStart="0dp"
                             android:paddingLeft="0dp"
+                            android:paddingEnd="0dp"
                             android:paddingRight="0dp"
-                            android:paddingBottom="0dp"
                             android:textColorHint="#333"
                             app:helperTextTextColor="#333">
 
@@ -139,23 +120,12 @@
                                 android:id="@+id/dialog_start_time_button"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginBottom="0dp"
-                                android:background="@android:color/transparent"
                                 android:backgroundTint="@android:color/transparent"
-                                android:hint="Start data/time"
+                                android:hint="Start date/time"
                                 android:outlineProvider="none"
-                                android:paddingLeft="10dp"
-                                android:paddingTop="10dp"
                                 android:singleLine="true"
                                 android:textColorHighlight="#333"
                                 android:textColorLink="#333" />
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="1dp"
-                                android:background="#000"
-                                android:orientation="vertical"></LinearLayout>
                         </com.google.android.material.textfield.TextInputLayout>
 
                         <com.google.android.material.textfield.TextInputLayout
@@ -164,9 +134,10 @@
                             android:layout_marginTop="15dp"
                             android:layout_weight="1"
                             android:background="@drawable/text_input_layout_shape"
+                            android:paddingStart="0dp"
                             android:paddingLeft="0dp"
+                            android:paddingEnd="0dp"
                             android:paddingRight="0dp"
-                            android:paddingBottom="0dp"
                             android:textColorHint="#333"
                             app:helperTextTextColor="#333">
 
@@ -174,23 +145,12 @@
                                 android:id="@+id/dialog_end_time_button"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginBottom="0dp"
-                                android:background="@android:color/transparent"
                                 android:backgroundTint="@android:color/transparent"
-                                android:hint="End data/time"
+                                android:hint="End date/time"
                                 android:outlineProvider="none"
-                                android:paddingLeft="10dp"
-                                android:paddingTop="10dp"
                                 android:singleLine="true"
                                 android:textColorHighlight="#333"
                                 android:textColorLink="#333" />
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="1dp"
-                                android:background="#000"
-                                android:orientation="vertical"></LinearLayout>
                         </com.google.android.material.textfield.TextInputLayout>
 
                         <LinearLayout
@@ -208,15 +168,15 @@
                                 android:text="Type of data (WIFI/mobile)"
                                 android:textSize="16sp" />
 
+                            <Spinner
+                                android:id="@+id/dialog_data_type_spinner"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="5dp"
+                                android:padding="10dp" />
+
                         </LinearLayout>
                     </LinearLayout>
-
-                    <Spinner
-                        android:id="@+id/dialog_data_type_spinner"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:padding="10dp" />
 
                     <Button
                         android:id="@+id/button"
