--- a/app/src/main/res/layout/card_main_app_card.xml
+++ b/app/src/main/res/layout/card_main_app_card.xml
@@ -40,7 +40,7 @@
                     app:civ_border_width="0dp" />
 
                 <TextView
-                    android:id="@+id/app_name_textView"
+                    android:id="@+id/app_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Whatsapp"
@@ -71,7 +71,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView8"
+                        android:id="@+id/app_data_used"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -108,7 +108,7 @@
                 android:visibility="visible">
 
                 <TextView
-                    android:id="@+id/textView13"
+                    android:id="@+id/unallocated_data_in_plan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -117,7 +117,7 @@
                     android:textSize="15sp" />
 
                 <TextView
-                    android:id="@+id/textView14"
+                    android:id="@+id/unallocated_data_size"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
