--- a/app/src/main/res/layout/card_main_app_card.xml
+++ b/app/src/main/res/layout/card_main_app_card.xml
@@ -7,6 +7,7 @@
     android:animateLayoutChanges="true">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/app_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -140,6 +141,7 @@
                     app:helperTextTextColor="#333">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/app_data_size"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:backgroundTint="@android:color/transparent"
@@ -159,6 +161,7 @@
                     android:orientation="horizontal">
 
                     <Button
+                        android:id="@+id/app_add_data"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="15dp"
@@ -169,6 +172,7 @@
                         android:text="Add " />
 
                     <Button
+                        android:id="@+id/app_remove_data"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -186,6 +190,7 @@
                     android:orientation="horizontal">
 
                     <Button
+                        android:id="@+id/app_add_all"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="15dp"
@@ -196,6 +201,7 @@
                         android:text="Add all" />
 
                     <Button
+                        android:id="@+id/app_remove_all"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -206,7 +212,7 @@
                 </LinearLayout>
 
                 <Button
-                    android:id="@+id/button7"
+                    android:id="@+id/app_set_unlimited"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="2dp"
