--- a/app/src/main/res/layout/fragment_active_dp.xml
+++ b/app/src/main/res/layout/fragment_active_dp.xml
@@ -8,6 +8,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nested_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
@@ -15,7 +16,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <!--FOR PAGER-->
             <!--<androidx.viewpager.widget.ViewPager
@@ -75,8 +76,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
-            </androidx.recyclerview.widget.RecyclerView>
+                android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
